# pyindi-client

./: .bumpversion.cfg  .gitignore  Dockerfile  MANIFEST.in  README.md  README.rst  RELEASES.md  RELEASES.rst  action.yml  indiclientpython.i  pyproject.toml  requirements-dev.txt  requirements-test.txt  run_test.sh  run_tests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  test-and-publish.yml
PyIndi/: __init__.py
debian/: changelog  control  copyright  rules  watch
doc/: install-ubuntu.html
examples/: pyindi-stellarium.py  pyindi-synscan.py  testindiclient.py  vega.py
examples/tuto-scripts/: tuto-ccd.py  tuto-minimal.py  tuto-monitor.py
tests/: conftest.py  test_example.py
